NBNP-131 Remove unwanted bullet (result of #3002580 patch update?)

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -287,6 +287,13 @@ label.checkbox-toggle:hover {
   display: block;
   margin-left: .5em;
 }
+/* Slider facet override */
+.item-list__range_slider {
+  display: contents;
+}
+.item-list__range_slider li {
+  list-style-type: none;
+}
 
 // Elements.
 dd {
