--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -228,10 +228,17 @@
                     <dd>{{ content.field_issn|field_value }}</dd>
                 {% endif %}
 
-                {% if language_value %}
+                {% if language_values %}
                     <dt>{{ language_label }}:</dt>
-                    <dd>{{ language_value }}</dd>
+                    <dd>
+                        <ul class="list-unstyled">
+                            {% for item in language_values %}
+                            <li>{{ item }}</li>
+                            {% endfor %}
+                        </ul>
+                    </dd>
                 {% endif %}
+
                 </dl>
             </div>
         </section>
