NBNP-57 Correct class name

--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -216,7 +216,7 @@
                 {% if content.field_subjects|field_value %}
                 <dt>{{ content.field_subjects|field_label }}:</dt>
                 <dd>
-                    <ul class="list-inline">
+                    <ul class="list-unstyled">
                         {% for key, item in content.field_subjects if key|first != '#' %}
                         <li>{{ item }}</li>
                         {% endfor %}
