--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -33,6 +33,10 @@ ins {
 }
 
 /* Class/ID style tweaks */
+.help-block {
+  font-size: .9em;
+}
+
 .title-details figure {
   float: right;
   margin-left: 1em;
