NBNP-205 Override Bootstrap heading border

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -517,6 +517,9 @@ a.btn-add::before {
 }
 
 /* Bootstrap overrides */
+.page-header {
+  border-bottom: none;
+}
 .text-muted {
   color: $text-muted;
 }
