--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -36,7 +36,6 @@ ins {
 .help-block {
   font-size: .9em;
 }
-
 .title-details figure {
   float: right;
   margin-left: 1em;
@@ -168,9 +167,9 @@ li.search-field:before {
 }
 
 .publication h2 {
-  color: $unb-lib-panel-heading;
+  color: #aa0404;
   font-size: 20px;
-  font-weight: 500;
+  font-weight: bold;
   margin-top: 0;
 }
 .publication figure {
