NBNP-201 Add online to holdings section display

--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -305,6 +305,22 @@
                             {% endfor %}
                         </dd>
                     {% endif %}
+
+                    {% if holding.online|length > 0 %}
+                        <dt>{% trans %}Online{% endtrans %}:</dt>
+                        <dd>
+                            {% for item in holding.online %}
+                                <dl class="holding-item">
+                                    {% for field in item %}
+                                        {% if field.value %}
+                                            <dt>{{ field.label }}:</dt>
+                                            <dd>{{ field.value|raw }}</dd>
+                                        {% endif %}
+                                    {% endfor %}
+                                </dl>
+                            {% endfor %}
+                        </dd>
+                    {% endif %}
                     </dl>
                  {% else %}
                     <div class="text-muted">
