--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -522,6 +522,28 @@ a.btn-add::before {
 .text-muted {
   color: $text-muted;
 }
+/* jQuery UI Bridge overrides */
+.modal.in .modal-dialog {
+  top: 33%;
+}
+.modal.in .modal-dialog .modal-content {
+  padding: .2em;
+}
+.modal-dialog .modal-header {
+  border: 1px solid #ddd;
+  background: #e9e9e9;
+}
+.modal-dialog h4 {
+  font-weight: bold;
+}
+.modal-dialog .close {
+  background: #f6f6f6;
+  border: 1px solid #454545;
+  color: #454545;
+  font-size: 24px;
+  border-radius: 3px;
+  padding: 1px 6px;
+}
 
 /* Search results */
 .search-results table a {
