NBNP-215 Add style rules for holdings within sort titles

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -543,6 +543,17 @@ a.btn-add::before {
 }
 
 /* Search results */
+.search-results .holding {
+  color: $text-muted;
+  display: inline;
+  font-size: smaller;
+}
+.search-results .views-field-field-sort-title span:first-of-type::before {
+  content: '(';
+}
+.search-results .views-field-field-sort-title span:last-of-type::after {
+  content: ')';
+}
 .search-results table a {
   display: block;
 }
