NBNP-219 Apply responsive table button dropdown menu large display fix

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -735,3 +735,9 @@ and (max-width: 991px){
     max-height: 160px;
   }
 }
+@media (min-width: 768px) {
+  /* Fix Bootstrap responsive table button dropdown menus */
+  .table-responsive {
+    overflow-x: visible;
+  }
+}
