NBNP-215 Update search result holding display

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -549,10 +549,8 @@ a.btn-add::before {
   font-size: smaller;
 }
 .search-results .views-field-field-sort-title span:first-of-type::before {
-  content: '(';
-}
-.search-results .views-field-field-sort-title span:last-of-type::after {
-  content: ')';
+  content: 'Available: ';
+  margin-left: .5em;
 }
 .search-results table a {
   display: block;
