NBNP-226 Add facet for holding field, capitalize facet labels

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -212,6 +212,9 @@ select[multiple="multiple"] + .form-control {
 }
 
 /* Facets overrides */
+.facet-item label {
+  text-transform: capitalize;
+}
 .block-facets h3 {
   background: $heading-bg;
   font-size: 18px;
