--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -245,6 +245,7 @@ select[multiple="multiple"] + .form-control {
 }
 .facet-item__count {
   color: $text-muted
+  font-size: .9em;
 }
 input[type="checkbox"].facets-checkbox {
   margin-right: .25em;
