--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -244,7 +244,7 @@ select[multiple="multiple"] + .form-control {
   font-weight: normal;
 }
 .facet-item__count {
-  color: $text-muted
+  color: $text-muted;
   font-size: .9em;
 }
 input[type="checkbox"].facets-checkbox {
