--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -173,7 +173,7 @@
 
                 {% if content.field_supplemental_information|field_value %}
                     <dt>{{ content.field_supplemental_information|field_label }}:</dt>
-                    <dd>{{ content.field_supplemental_information|field_value }}</dd>
+                    <dd class="no-borders">{{ content.field_supplemental_information|field_value }}</dd>
                 {% endif %}
 
                 {% if family %}
