NBNP-225 Apply style requests to Content Overview Add content button

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -523,6 +523,21 @@ a.btn-add::before {
 .text-muted {
   color: $text-muted;
 }
+/* Menu local action xs button override */
+.local-actions a.btn-xs {
+  border-radius: 4px;
+  font-size: 14px;
+  line-height: inherit;
+  margin-bottom: .75em;
+  padding: 6px 12px;
+}
+/* Menu local action 'add' button icon */
+.local-actions a[href="/node/add"]::before {
+  content: "\2b";
+  font-family: "Glyphicons Halflings";
+  font-size: smaller;
+  margin-right: .25em;
+}
 /* jQuery UI Bridge overrides */
 .modal.in .modal-dialog {
   top: 25%;
