NBNP-236 Restore 'Supplementary Title' label to Braod Title Histry

--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -188,6 +188,7 @@
                         {{ family }}
                     </dd>
                     {% if supplemental_title %}
+                        <dt>{{ supplemental_title_label }}:</dt>
                         <dd>
                             {{ supplemental_title }}
                         </dd>
